objdiff-core/tests/snapshots/arch_x86__read_x86.snap
---
source: objdiff-core/tests/arch_x86.rs
expression: obj
---
Object {
    arch: ArchX86 {
        arch: X86,
        endianness: Little,
        section_bitness: {
            0: 32,
            1: 32,
            2: 32,
        },
    },
    endianness: Little,
    symbols: [
        Symbol {
            name: "[.drectve]",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 38,
            kind: Section,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "[.data]",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 0,
            kind: Section,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "?a@@3PAXA",
            demangled_name: Some(
                "void *a",
            ),
            normalized_name: None,
            address: 0,
            size: 4,
            kind: Object,
            section: Some(
                1,
            ),
            flags: FlagSet(Global | SizeInferred),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "$SG526",
            demangled_name: None,
            normalized_name: None,
            address: 4,
            size: 6,
            kind: Object,
            section: Some(
                1,
            ),
            flags: FlagSet(Local | SizeInferred),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "[.text]",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 0,
            kind: Section,
            section: Some(
                2,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "?PrintThing@@YAXXZ",
            demangled_name: Some(
                "void __cdecl PrintThing(void)",
            ),
            normalized_name: None,
            address: 0,
            size: 18,
            kind: Function,
            section: Some(
                2,
            ),
            flags: FlagSet(Local | SizeInferred),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "@comp.id",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 0,
            kind: Object,
            section: None,
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "_printf",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 0,
            kind: Function,
            section: None,
            flags: FlagSet(Global),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "[.data-0]",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 10,
            kind: Section,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
    ],
    sections: [
        Section {
            id: ".drectve-0",
            name: ".drectve",
            address: 0,
            size: 38,
            kind: Unknown,
            data: SectionData(
                0,
            ),
            flags: FlagSet(),
            align: Some(
                1,
            ),
            relocations: [],
            line_info: {},
            virtual_address: None,
        },
        Section {
            id: ".data-0",
            name: ".data",
            address: 0,
            size: 10,
            kind: Data,
            data: SectionData(
                10,
            ),
            flags: FlagSet(),
            align: Some(
                4,
            ),
            relocations: [
                Relocation {
                    flags: Coff(
                        6,
                    ),
                    address: 0,
                    target_symbol: 5,
                    addend: 0,
                },
            ],
            line_info: {},
            virtual_address: None,
        },
        Section {
            id: ".text-0",
            name: ".text",
            address: 0,
            size: 18,
            kind: Code,
            data: SectionData(
                18,
            ),
            flags: FlagSet(),
            align: Some(
                16,
            ),
            relocations: [
                Relocation {
                    flags: Coff(
                        6,
                    ),
                    address: 4,
                    target_symbol: 3,
                    addend: 0,
                },
                Relocation {
                    flags: Coff(
                        20,
                    ),
                    address: 9,
                    target_symbol: 7,
                    addend: 0,
                },
            ],
            line_info: {},
            virtual_address: None,
        },
    ],
    split_meta: None,
    path: None,
    timestamp: None,
    flow_analysis_results: {},
}
