objdiff-core/tests/snapshots/arch_x86__read_x86_jumptable.snap
---
source: objdiff-core/tests/arch_x86.rs
expression: obj
---
Object {
    arch: ArchX86 {
        arch: X86,
        endianness: Little,
        section_bitness: {
            0: 32,
            1: 32,
            2: 32,
        },
    },
    endianness: Little,
    symbols: [
        Symbol {
            name: "[.drectve]",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 38,
            kind: Section,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "[.text]",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 0,
            kind: Section,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "?test@@YAHH@Z",
            demangled_name: Some(
                "int __cdecl test(int)",
            ),
            normalized_name: None,
            address: 0,
            size: 88,
            kind: Function,
            section: Some(
                1,
            ),
            flags: FlagSet(Global | SizeInferred),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "$L272",
            demangled_name: None,
            normalized_name: None,
            address: 17,
            size: 0,
            kind: Unknown,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "$L273",
            demangled_name: None,
            normalized_name: None,
            address: 23,
            size: 0,
            kind: Unknown,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "$L274",
            demangled_name: None,
            normalized_name: None,
            address: 29,
            size: 0,
            kind: Unknown,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "$L275",
            demangled_name: None,
            normalized_name: None,
            address: 35,
            size: 0,
            kind: Unknown,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "$L276",
            demangled_name: None,
            normalized_name: None,
            address: 41,
            size: 0,
            kind: Unknown,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "$L277",
            demangled_name: None,
            normalized_name: None,
            address: 47,
            size: 0,
            kind: Unknown,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "$L278",
            demangled_name: None,
            normalized_name: None,
            address: 53,
            size: 0,
            kind: Unknown,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "$L282",
            demangled_name: None,
            normalized_name: None,
            address: 60,
            size: 0,
            kind: Unknown,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "[.debug$F]",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 16,
            kind: Section,
            section: Some(
                2,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "@comp.id",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 0,
            kind: Object,
            section: None,
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
    ],
    sections: [
        Section {
            id: ".drectve-0",
            name: ".drectve",
            address: 0,
            size: 38,
            kind: Unknown,
            data: SectionData(
                0,
            ),
            flags: FlagSet(),
            align: Some(
                1,
            ),
            relocations: [],
            line_info: {},
            virtual_address: None,
        },
        Section {
            id: ".text-0",
            name: ".text",
            address: 0,
            size: 96,
            kind: Code,
            data: SectionData(
                96,
            ),
            flags: FlagSet(),
            align: Some(
                16,
            ),
            relocations: [
                Relocation {
                    flags: Coff(
                        6,
                    ),
                    address: 13,
                    target_symbol: 10,
                    addend: 0,
                },
                Relocation {
                    flags: Coff(
                        6,
                    ),
                    address: 60,
                    target_symbol: 3,
                    addend: 0,
                },
                Relocation {
                    flags: Coff(
                        6,
                    ),
                    address: 64,
                    target_symbol: 4,
                    addend: 0,
                },
                Relocation {
                    flags: Coff(
                        6,
                    ),
                    address: 68,
                    target_symbol: 5,
                    addend: 0,
                },
                Relocation {
                    flags: Coff(
                        6,
                    ),
                    address: 72,
                    target_symbol: 6,
                    addend: 0,
                },
                Relocation {
                    flags: Coff(
                        6,
                    ),
                    address: 76,
                    target_symbol: 7,
                    addend: 0,
                },
                Relocation {
                    flags: Coff(
                        6,
                    ),
                    address: 80,
                    target_symbol: 8,
                    addend: 0,
                },
                Relocation {
                    flags: Coff(
                        6,
                    ),
                    address: 84,
                    target_symbol: 9,
                    addend: 0,
                },
            ],
            line_info: {},
            virtual_address: None,
        },
        Section {
            id: ".debug$F-0",
            name: ".debug$F",
            address: 0,
            size: 16,
            kind: Unknown,
            data: SectionData(
                0,
            ),
            flags: FlagSet(),
            align: Some(
                1,
            ),
            relocations: [],
            line_info: {},
            virtual_address: None,
        },
    ],
    split_meta: None,
    path: None,
    timestamp: None,
    flow_analysis_results: {},
}
