objdiff-core/tests/snapshots/arch_x86__read_x86_local_labels.snap
---
source: objdiff-core/tests/arch_x86.rs
expression: obj
---
Object {
    arch: ArchX86 {
        arch: X86,
        endianness: Little,
        section_bitness: {
            0: 32,
        },
    },
    endianness: Little,
    symbols: [
        Symbol {
            name: "[.text]",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 0,
            kind: Section,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "ConvertToUppercaseShiftJIS",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 92,
            kind: Function,
            section: Some(
                0,
            ),
            flags: FlagSet(Global | SizeInferred),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "LAB_0042b845",
            demangled_name: None,
            normalized_name: None,
            address: 21,
            size: 0,
            kind: Object,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "LAB_0042b850",
            demangled_name: None,
            normalized_name: None,
            address: 32,
            size: 0,
            kind: Object,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "LAB_0042b869",
            demangled_name: None,
            normalized_name: None,
            address: 57,
            size: 0,
            kind: Object,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "LAB_0042b87c",
            demangled_name: None,
            normalized_name: None,
            address: 76,
            size: 0,
            kind: Object,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "LAB_0042b883",
            demangled_name: None,
            normalized_name: None,
            address: 83,
            size: 0,
            kind: Object,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "LAB_0042b884",
            demangled_name: None,
            normalized_name: None,
            address: 84,
            size: 0,
            kind: Object,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "LAB_0042b889",
            demangled_name: None,
            normalized_name: None,
            address: 89,
            size: 0,
            kind: Object,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
    ],
    sections: [
        Section {
            id: ".text-0",
            name: ".text",
            address: 0,
            size: 92,
            kind: Code,
            data: SectionData(
                92,
            ),
            flags: FlagSet(),
            align: Some(
                16,
            ),
            relocations: [],
            line_info: {},
            virtual_address: None,
        },
    ],
    split_meta: None,
    path: None,
    timestamp: None,
    flow_analysis_results: {},
}
